# dayflow

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENCODING_FIXES.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  ROADMAP.md  VERSIONING.md  codecov.yml  create_release.sh  push_to_github.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.dayflow/: config.yaml
.github/ISSUE_TEMPLATE/: feature-daily-notes-organization.md  folder-display-formatting.md  folder-organization-config.md  folder-reorganization-migration.md  v0.2.0-feature.md
.github/workflows/: tests.yml
dayflow/: __init__.py
dayflow/core/: __init__.py  current_meeting.py  daily_summary.py  exceptions.py  graph_client.py  gtd.py  html_to_markdown.py  meeting_matcher.py  obsidian_formatter.py  sync.py  sync_daemon.py  sync_status.py  zettel.py
dayflow/ui/: __init__.py  cli.py  progress.py
dayflow/vault/: __init__.py  config.py  connection.py  detector.py  setup_wizard.py
docs/: CODECOV_SETUP.md  README.md  architecture.md  cleanup-summary.md  project-status.md  roadmap.md  user-guide.md
docs/development/: v0.2.0-plan.md
docs/guides/: vault-setup.md
examples/: README.md  integration_example.py
scripts/: release.py
tests/: conftest.py  test_encoding.py  test_windows_compatibility.py
tests/core/: test_current_meeting.py  test_daily_summary.py  test_graph_client.py  test_html_to_markdown.py  test_html_to_markdown_real_world.py  test_meeting_matcher.py  test_obsidian_formatter.py  test_sync_daemon.py  test_sync_daemon_edge_cases.py  test_sync_engine.py  test_sync_progress.py  test_sync_status.py
tests/integration/: test_full_sync_pipeline.py  test_html_cleanup_integration.py  test_sync_vault_integration.py  test_sync_with_folders.py
tests/ui/: __init__.py
tests/ui/cli/: __init__.py  test_cli_interactive.py  test_cli_main.py  test_cli_progress.py  test_cli_user_experience.py  test_config_commands.py  test_continuous_sync.py  test_note_command.py  test_status_command.py  test_vault_commands.py
tests/vault/: __init__.py  test_config.py  test_connection.py  test_detector.py  test_folder_organization.py
